--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
